force-app/main/default/objects/Apttus_Config2__ExternalOrderSummary__c/Apttus_Config2__ExternalOrderSummary__c.object-meta.xml
<CustomObject>
    <description>Represents an external order summary associated with an account</description>
    <label>External Order Summary</label>
    <nameField>
        <displayFormat>EO-{00000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Order Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>