force-app/main/default/objects/Apttus_Config2__ExternalOrderSummary__c/fields/Apttus_Config2__AccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the associated account</description>
    <inlineHelpText>ID of the associated account</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>External Order Summary</relationshipLabel>
    <relationshipName>ExternalOrderSummary</relationshipName>
    <type>Lookup</type>
</CustomField>