force-app/main/default/objects/Apttus_Config2__ExternalOrderSummary__c/fields/Apttus_Config2__BillToAccountId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__BillToAccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the bill to account</description>
    <inlineHelpText>ID of the bill to account</inlineHelpText>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>External Orders (Bill To)</relationshipLabel>
    <relationshipName>ExternalOrdersBillTo</relationshipName>
    <type>Lookup</type>
</CustomField>