force-app/main/default/objects/Apttus_Config2__ExternalOrderSummary__c/fields/Apttus_Config2__Description__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Description__c</fullName>
    <description>The order summary description</description>
    <inlineHelpText>The order summary description</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>