force-app/main/default/objects/Apttus_Config2__ExternalOrderSummary__c/fields/Apttus_Config2__ForecastData__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ForecastData__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the data provided is &quot;Forecast Data&quot; or the &quot;Actual Data&quot;</description>
    <inlineHelpText>Indicates whether the data provided is &quot;Forecast Data&quot; or the &quot;Actual Data&quot;</inlineHelpText>
    <label>Forecast Data ?</label>
    <type>Checkbox</type>
</CustomField>