force-app/main/default/objects/Apttus_Config2__ExternalOrderSummary__c/fields/Apttus_Config2__Type__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__Type__c</fullName>
    <description>The external order type</description>
    <inlineHelpText>The external order type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sales Data</fullName>
                <default>true</default>
                <label>Sales Data</label>
            </value>
            <value>
                <fullName>Purchase Data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>